# bolb-bot

./: .dockerignore  .env.example  .gitignore  BotBase.py  DockerFile  Dockerfile  README.md  config.py.example  dbman.py  docker-compose.yml  main.py  pyproject.toml  slash_.py
bolb-bot/: __main__.py
bolb-bot/cogs/: events.py
bolb_bot/: __main__.py  config.py
bolb_bot/cogs/: bolbs.py  events.py
cogs/: bolbs.py  events.py
