[tool.poetry]
name = "bolb-bot"
version = "0.1.0"
description = "Why, It's the bolb bot!"
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.25.0"
nextcord = "^2.0.0-alpha.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
